# nonebot-plugin-picmenu-next

./: AGENTS.md  README.md  pyproject.toml
defs/: ExternalPluginInfo.json
docs/: development.md
nonebot_plugin_picmenu_next/: __init__.py  __main__.py  config.py  data_source.py  ft_parser.py  markdown.py
nonebot_plugin_picmenu_next/data_source/: __init__.py  alconna.py  collect.py  mixin.py  models.py  pinyin.py
nonebot_plugin_picmenu_next/templates/: __init__.py  hr_utils.py  jj_utils.py  pw_utils.py  t_utils.py
nonebot_plugin_picmenu_next/templates/default/: __init__.py  detail.html  index.html
nonebot_plugin_picmenu_next/templates/default/css/: base.css  dark.css  detail.css  index.css
nonebot_plugin_picmenu_next/templates/default/res/: base.html.jinja  detail.html.jinja  index.html.jinja
nonebot_plugin_picmenu_next/templates/default/res/css/: base.css  detail.css  index.css
tests/: conftest.py  test_adapter_filter.py  test_alconna_collect.py  test_markdown.py
