[project]
name = "nonebot-plugin-picmenu-next"
dynamic = ["version"]
description = "Next gen pic menu plugin"
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-plugin-alconna>=0.54.0",
    "nonebot-plugin-waiter>=0.8.0",
    "nonebot-plugin-htmlrender>=0.4.0",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-picmenu-next"

[dependency-groups]
dev = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_picmenu_next/__init__.py"
