[project]
name = "nonebot-plugin-picmenu-next"
dynamic = ["version"]
description = "Next-gen PicMenu plugin for NoneBot2"
authors = [{ name = "LgCuwukii", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.5.0",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-plugin-localstore>=0.7.4",
    "cookit[jinja,loguru,nonebot-alconna,nonebot-localstore,pw,pyd]>=0.13.3",
    "pypinyin>=0.55.0",
    "jieba>=0.42.1",
    "thefuzz>=0.22.1",
    "markdown-it-py[plugins]>=4.2.0",
    "pygments>=2.20.0",
    "nonebot-plugin-htmlrender>=0.7.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-picmenu-next"

[project.optional-dependencies]
yaml = ["ruamel-yaml>=0.19.1"]
toml = ["tomli>=2.4.1; python_version<'3.11'"]
config-parsers = ["nonebot-plugin-picmenu-next[yaml,toml]"]

spacy-pkuseg = ["spacy-pkuseg>=1.0.1"]
rjieba = ["rjieba>=0.2.1"]
jieba-fast = ["jieba-fast>=0.53"]
word-cutters = ["nonebot-plugin-picmenu-next[spacy-pkuseg,rjieba,jieba-fast]"]

recommended = ["nonebot-plugin-picmenu-next[config-parsers,spacy-pkuseg]"]
all = ["nonebot-plugin-picmenu-next[config-parsers,word-cutters]"]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nonebot_plugin_picmenu_next/__init__.py"
